fixed alignment of update cards

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -17,6 +17,7 @@
   letter-spacing: .02em;
   line-height: 1.3;
   background-color: #ffffff;
+  margin: 0 auto;
 }
 
 .card.draft {
